  * apport/crashdb_impl/launchpad.py, download(): Download
    DpkgTerminalLog.txt attachment as well.
  * apport/report.py: If downloading a nonexisting bug pattern file
    name succeeds and returns a HTML snippet with "404 Not Found",
    consider this as failure. This repairs falling back to source
    package names. (LP: #328751)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 20 Feb 2009 11:05:25 +0100

apport (0.133) jaunty; urgency=low

  [ Andy Whitcroft ]
  * apport/hookutils.py: define and include a machine type from the hardware
    information in the report, using HAL information where available.
  * bin/apportcheckresume: include the machine type in the suspend/hibernate
    report title.  They are generally machine specific.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 19 Feb 2009 17:49:03 +0100

apport (0.132) jaunty; urgency=low

  [ Martin Pitt ]
  * Add debian/local/apport-collect: Download a Launchpad bug report,
    get its source package, check if it has apport hooks, and if so,
    run and upload them. Add manpage, too. (LP: #124338)
  * debian/control: Add Suggests: python-launchpadlib; this is only
    needed by apport-collect, thus we don't need to pull that into
    every default installation; if it's not installed apport-collect
    will detect and point this out.
  * debian/control: Add ${misc:Depends} dependencies.

  [ Jonathan Riddell ]
  * Set window icon in apport-qt

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 19 Feb 2009 13:50:34 +0100

apport (0.131) jaunty; urgency=low

  [ Andy Whitcroft ]
  * bin/apportcheckresume, bin/kernel_oops, cli/apport-cli, gtk/apport-gtk,
    gtk/apport-gtk.glade, qt4/apport-qt: generalised the KernelOops
    dialog and handling to allow suspend and hibernate failures present
    more accurate reasons for the report.  Also commonises all messages
    in the three implementations to simplify internationalisation.

  [ Martin Pitt ]
  * po/Makefile: Fix merge-po rule to actually work again.