@@ -8,8 +8,9 @@ apport (0.134) UNRELEASED; urgency=low
     name succeeds and returns a HTML snippet with "404 Not Found",
     consider this as failure. This repairs falling back to source
     package names. (LP: #328751)
+  * apport/hookutils.py: Replace tabs with spaces.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 20 Feb 2009 11:05:25 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 20 Feb 2009 11:21:56 +0100
 
 apport (0.133) jaunty; urgency=low
 
